# Project-Kairos

./: .env.example  .gitignore  BIZ_SPEC.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-ci.yml
kairos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
specs/: industry_knowledge_graph.spec  website.spec
src/: main.py  memory_janitor.py  state.py  utils.py
src/agents/: archivist.py  scout.py  think_tank.py  tool_maker.py
src/memory/: graph_manager.py
src/rag/: __init__.py  constraint_decoder.py  context_engine.py
src/resources/: known_packages.json
src/sandbox/: executor.py
