[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kairos"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
]

[tool.uv]
python = "3.12"   # Use a prebuilt binary — avoids compiling Python from source

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
